--- a/mystyle.css
+++ b/mystyle.css
@@ -1,9 +1,8 @@
-
 body {
   margin: 0;
   background-image: url('wp.jpg');
   background-repeat: no-repeat;
-  background-attachment: fixed; 
+  background-attachment: fixed;
   background-size: 100% 100%;
 }
 
@@ -11,17 +10,32 @@ body::before {
   content: "";
   position: fixed;
   inset: 0;
-
-  border-style: solid;
-  border-width: 40px;
-
-  border-image-source: url("/assets/rsz_1rsz_bill1.jpg");
-  border-image-slice: 1;
-  border-image-repeat: repeat;
-  border-image-width: 40px;
-
   pointer-events: none;
   z-index: 9999;
+
+  background-image:
+    url("/assets/rsz_1rsz_bill1.jpg"),
+    url("/assets/rsz_1rsz_bill1.jpg"),
+    url("/assets/rsz_1rsz_bill1.jpg"),
+    url("/assets/rsz_1rsz_bill1.jpg");
+
+  background-repeat:
+    repeat-x,
+    repeat-x,
+    repeat-y,
+    repeat-y;
+
+  background-position:
+    top left,
+    bottom left,
+    top left,
+    top right;
+
+  background-size:
+    auto 40px,
+    auto 40px,
+    40px auto,
+    40px auto;
 }
 
 h1 { 
@@ -38,4 +52,3 @@ p {
   color: pink;
   margin-left: 15px;
 }
-```
