--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-image: url('wp.jpg');
+  background-image: url('invertbill1.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
